# moe

./: .gitignore  README.md
deployment/svc-lean-lsp-mcp/: .env.example  docker-compose.yml
deployments/: run.sh  stop.sh
deployments/svc-lean-lsp-mcp/: .env.example  docker-compose.yml
deployments/svc-moe/: .env.example  docker-compose.yml
deployments/svc-nginx-proxy/: docker-compose.yml  restart-config-nginx.sh
deployments/svc-nginx-proxy/nginx/: nginx.conf  proxy.conf
deployments/svc-nginx-proxy/nginx/conf.d/: moe.conf
lean_lsp_mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_diagnostic_tool.py  test_docker_setup.sh  test_goal_example.lean  test_goal_tool.py  test_http_mcp_client.py  test_http_transport.py  test_import.py  test_real_project.py  test_simple_goal.py
lean_lsp_mcp/src/: __init__.py  __main__.py  client_utils.py  file_utils.py  instructions.py  loogle.py  models.py  outline_utils.py  search_utils.py  server.py  test.lean  utils.py
moe/: .dockerignore  .env.migration.example  .env.worker.example  Dockerfile.api  Dockerfile.migration  Dockerfile.worker  Makefile  pyproject.toml
moe/api/: dependencies.py  main.py
moe/api/v1/: router.py
moe/api/v1/endpoints/: health.py  moe.py
moe/common/: config.py  db.py  logging_conf.py
moe/common/models/: __init__.py  problem.py  submission.py  submission_result.py
moe/common/schemas/: __init__.py
moe/migration/: README.md  alembic.ini  env.py  manage_migration_rest.py  migrate.py  reset_db.py
moe/migration/versions/: 4ad734eb5a1a_initial_schema.py
moe/modules/: moe_service.py
moe/worker/: celery_app.py  lean_mcp_client.py
moe/worker/prompts/: init_langfuse.sh  init_prompts.yml  prompt_manager.py
moe/worker/tasks/: submission_tasks.py
tests/: README.md  test_all_deps.sh  test_langfuse.py  test_lean_lsp_mcp.py  test_moe_api.sh  test_openrouter_llm.py  test_sentry.py
