[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-lsp-mcp"
version = "0.16.1"
description = "Lean Theorem Prover MCP"
authors = [{name="Oliver Dressler", email="hey@oli.show"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "leanclient==0.6.1",
    "mcp[cli]==1.23.1", "mcp[cli]>=1.22.0",
    "orjson>=3.11.1",
]

[project.urls]
Repository = "https://github.com/oOo0oOo/lean-lsp-mcp"

[tool.setuptools]
package-dir = {"lean_lsp_mcp" = "src"}

[project.optional-dependencies]
lint = [
    "ruff>=0.2.0",
]
dev = [
    "ruff>=0.2.0",
    "pytest>=8.3",
    "anyio>=4.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project.scripts]
lean-lsp-mcp = "lean_lsp_mcp:main"
